{
    "name": "Controls",
    "maps": [
        {
            "name": "VR",
            "id": "acf05c09-b326-45bb-a8e7-3d151cbc0742",
            "actions": [
                {
                    "name": "Left_Grip",
                    "type": "Button",
                    "id": "8cba5a81-bc86-41f8-afdc-8f5e19317184",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right_Grip",
                    "type": "Button",
                    "id": "6628da19-e368-4b01-9fa2-b46e70ca1d49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left_Trigger",
                    "type": "Button",
                    "id": "60fa3e2c-3a6d-437e-a228-9fa95026b4e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right_Trigger",
                    "type": "Button",
                    "id": "e5b10904-f14b-4ff5-8306-79c872e07ecb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right_Primary",
                    "type": "Button",
                    "id": "ddf198d1-cf73-491d-9298-05f42ef54b23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left_Primary",
                    "type": "Button",
                    "id": "42a6b75e-e484-4eb6-af39-c2604f0b321c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc2351a9-4591-4d3d-81e3-0aba96baefb5",
                    "path": "<OculusTouchController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de96a1b8-2866-4b28-8620-79834dcacff0",
                    "path": "<OculusTouchController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right_Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32889b40-af25-416b-b872-0cda6f74eecb",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7de3d797-49a1-4f7c-be5c-d11eadbb0024",
                    "path": "<OculusTouchController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right_Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b85699e2-e268-41ef-bac9-48022e917c9d",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right_Primary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a57303c5-2c69-4f9a-95dc-3643975887d5",
                    "path": "<OculusTouchController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Primary",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}